--- a/src/app/modules/sandbox/effective/writeEffective.html
+++ b/src/app/modules/sandbox/effective/writeEffective.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div ng-hide="addEffectiveTitle">
             <div class="col s1">    
-                <i class="material-icons red-text text-lighten-1 center medium">mode_edit</i>
+                <i class="fa fa-pencil-square-o fa-3x red-text text-lighten-1"></i>
             </div>
             <div class="col s11">
                 <h5 class="light-green-text text-lighten-1">{{'updateEffective.title' | translate }}</h5>
@@ -14,7 +14,7 @@
         </div>
         <div ng-show="addEffectiveTitle">
             <div class="col s1">    
-                <i class="material-icons red-text text-lighten-1 center medium">group_add</i>
+                <i class="fa fa-plus-square-o fa-3x red-text text-lighten-1"></i>
             </div>
             <div class="col s11">
                 <h5 class="light-green-text text-lighten-1">{{'addEffective.title' | translate }}</h5>
