Asana-66981374345698 : Lien vers home page du compte utilisateur

--- a/src/app/modules/commons/users/signup/signup.html
+++ b/src/app/modules/commons/users/signup/signup.html
@@ -146,7 +146,7 @@
             
             
             <!-- step choix du sport -->
-            <wz-step title="{{'sportSection.label.userSignupSportSection' | translate }}" template="app/components/directives/wizard/step.html">
+            <wz-step wz-disabled="{{temp.skipSportSection}}" ng-if="!temp.skipSportSection" title="{{'sportSection.label.userSignupSportSection' | translate }}" template="app/components/directives/wizard/step.html" >
                 <div class="row"></div>
                 <form novalidate class="col s12" name="userSportSection">
                 
