--- a/src/app/modules/commons/users/signup/signupDone.html
+++ b/src/app/modules/commons/users/signup/signupDone.html
@@ -30,7 +30,7 @@
             </div>
             <div class="row">
                 <div class="center col s12">
-                <a href="" class="btn white-text blue-grey darken-3" ng-click="goHome()">{{'endPage.buttonHome' | translate }}</a>&nbsp;
+                <a href="" class="btn white-text blue-grey darken-3" ng-click="goHome()"><i class="fa fa-home left"></i>{{'endPage.buttonHome' | translate }}</a>&nbsp;
                 </div>
             </div>
         </div>
