Asana-66984353719789 : refactoring du bouton Annuler de la modal singup

--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -243,10 +243,11 @@
             </div>
         </div>
 
-        <div class="modal-footer">
-            <button type="submit" class="waves-effect waves-red btn green darken-1" translate="commons.buttons.validate"/>
-            <a href="" ng-click="cancelSignup()" class="modal-action modal-close waves-effect waves-red btn red">{{'commons.buttons.cancel' |
-                translate}}</a>
+		<div class="row center">
+            <div class="col s12">
+                <a href="" ng-click="cancelSignup()" class="modal-action modal-close waves-effect waves-red btn red" translate="commons.buttons.cancel"></a>
+                <button type="submit" class="btn waves-effect waves-red  green darken-1" translate="commons.buttons.validate"/>
+            </div>
         </div>
     </form>
 </div>
