Asana-67167563211491 : pb traduction sur birthdate

--- a/src/app/modules/commons/users/signup/signup.html
+++ b/src/app/modules/commons/users/signup/signup.html
@@ -80,7 +80,7 @@
 								</div>
 								<div class="input-field col m12 s6">
 									<div class="hide-on-med-and-down"><br/></div>
-									<input placeholder="{{'userLabels.userBirthDate' | translate }}" ng-model="signup.birthdate" id="userBirthDate" type="date" class="validate" required>
+									<input placeholder="{{'civilSection.label.userBirthDate' | translate }}" ng-model="signup.birthdate" id="userBirthDate" type="date" class="validate" required>
 								</div>
 							</div>
 						</div>
